lab1/Test/L1-A-3-53.output
Error Type A at Line 1
Error Type A at Line 7
Error Type A at Line 11
Error Type B at Line 14
Error Type A at Line 15
Error Type A at Line 15
Error Type B at Line 19
Error Type B at Line 19
