lab1/Test/L1-A-3-53.cmm
float atmkb @( ) {
}
int _VPt1PqdhIiw2ADG6 ( float bOyajjT [ 224149363 
  ] [ 1767449348 ] [ 1503714195 ] , int oOgp6hc9mD ) 
  {
  if ( M9N ( O ) * Osa_dfCt6Ygl + coiYRLWcVa2zg9Ta 
    + a $+ RzB3VhP > OFFaykr0Rghw6 >= hW < mGW <= rC3Q5m1D 
    <= CfafRa1C7gOw4SrFG0 > iKZldjo_DvmKo != uSX5oS8OcXY7rmzZg 
    != Buh == hXOoxE > ZcLYZvSbH5fzu0k7FBEK || l4BWVNRrHhEho2hDN 
    || yVWRiG1vrZZW4n )   WFhBFy0QkU2o5I5Bp ;
else   yCyVlnY @;

  {
  }[ 
:  if @( YCnZ3ngnQSI )   lk7 ;
else   NY ;

}
xfpys while 